messaging_app/deployment.yaml
# deploys the django messaging app to Kubernetes
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-app
  # namespace: messaging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messaging-app
  template:
    metadata:
      labels:
        app: messaging-app
    spec:
      containers:
        - name: messaging-app
          image: messaging_app-web:latest
          imagePullPolicy: Never
          command: ['python3', 'manage.py', 'runserver', '0.0.0:8000']
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: messaging-app-service
  # namespace: messaging
spec:
  selector:
    app: messaging-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
